# fastapi-tortoise-orm

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  UploadFile上传文件.py  aerich.ini  bg_task.md  data.json  docker-compose-m1.yml  docker-compose.yml  hello_world.py  log-config.json  pydantic使用方法.py  pyproject.toml  requirements.txt  run.py  setup.cfg  上传文件.py  字段验证错误消息处理.py  异常捕获.py
compose/mysql/conf/: my.cnf
compose/mysql/init/: init.sql
coronavirus/: __init__.py  cache.py  city.json  config.py  crud.py  data.json  database.py  main.py  models.py  schemas.py
coronavirus/static/: semantic.css
coronavirus/templates/: home.html
migrations/models/: 0_20210821181540_init.sql  1_20211103155611_add_field_index_add_now_confirmed.sql  2_20211103170137_change_datatable_date_type.sql
tutorial/: README.md  UploadFile上传文件.py  __init__.py  bg_task.md  chapter03.py  chapter04.py  chapter05.py  chapter06.py  chapter07.py  chapter08.py  data.json  pydantic使用方法.py  字段验证错误消息处理.py  异常捕获.py
