[tool.poetry]
name = "coronavirus"
version = "0.1.2"
description = "coronavirus"
authors = ["hulk"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "2.11.2"
aiofiles = "0.6.0"
fastapi = "0.64.0"
email-validator = "1.1.2"
pymysql = "^1.0.2"
requests = "^2.25.1"
sqlalchemy = "1.3.22"
uvicorn = "^0.14.0"
python-multipart = "^0.0.5"
passlib = "^1.7.4"
python-jose = "3.2.0"
bcrypt = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"